Minor fix in dark mode switch location

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -162,7 +162,7 @@ footer
 }
 .switch {
     position: absolute;
-    right: 300px;
+    right: 350px;
     display: inline-block;
     width: 60px;
     height: 34px;
